// version of protocol buffer used
syntax = "proto3";

// package name for the buffer will be used later
package helloworld;

// service which can be executed
service Greeter {
  // function which can be called
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// argument
message HelloRequest {
  // data type and position of data
  string name = 1;
}

// return value
message HelloReply {
  // data type and position of data
  string message = 1;
}
